--- a/Policy/index.html
+++ b/Policy/index.html
@@ -3,8 +3,33 @@
 <head>
   <title>Insurance Portal</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+  <header>
+    <div class="logo">
+      <img src="./assets/logo.png" alt="Logo">
+    </div>
+    <div class="header-component">
+      <div class="header-text">
+        <h1>ABC Insurance Company</h1>
+      </div>
+      <div class="header-text-small">
+        <h1>Reliable Fast Personable</h1>
+      </div>
+    </div>
+    <div class="right-component">
+      <h1 class="header-text-right">Contact Support</h1>
+      <div class="right-component-2">
+        <i style="font-size:24px" class="fa">&#xf095;</i>
+        <h1 class="header-text-right-2">+91 999999999</h1>
+      </div>
+      <div class="right-component-2">
+        <i style="font-size:24px" class="fa">&#xf0e0;</i>
+        <h1 class="header-text-right-2">ilp@tcs.com</h1>
+      </div>
+    </div>
+  </header>
   <h1>Welcome to the Insurance Portal</h1>
   <div class="buttons">
     <button onclick="location.href='index.html'">Home</button>
