--- a/Policy/index.html
+++ b/Policy/index.html
@@ -32,9 +32,9 @@
   </header>
   <h1>Welcome to the Insurance Portal</h1>
   <div class="buttons">
-    <button onclick="location.href='index.html'">Home</button>
-    <button onclick="location.href='registration.html'">Registration</button>
-    <button onclick="location.href='result.html'">View Result</button>
+    <button style="margin: 10px;" onclick="location.href='../Registration/ack.html'">User Info</button>
+    <button style="margin: 10px;" onclick="location.href='registration.html'">Registration</button>
+    <button style="margin: 10px;" onclick="location.href='result.html'">View Result</button>
   </div>
   <script src="script.js"></script>
 </body>
